objects/Boarding_Form__c.object
<CustomObject>
    <fields>
        <fullName>Original_Term_Code__c</fullName>
        <inlineHelpText>The origination date - the Expiration (lock-out) date/term type. If no expiration date, origination date - maturity date/term type. Example: 24/M = 24 months</inlineHelpText>
        <label>Original Term/Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Date_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Date_note_date__c</fullName>
        <inlineHelpText>Date the agreements were executed by both parties. Source doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower.</inlineHelpText>
        <label>Origination Date (note date)*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Discount_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Discount__c</fullName>
        <description>Default set by trigger from Opp. field
CI_Closing_Fee_s__c</description>
        <label>Origination Fee/Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origination Summary</label>
        <referenceTo>Origination_Summary__c</referenceTo>
        <relationshipLabel>Boarding Forms</relationshipLabel>
        <relationshipName>Boarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_1_Source_Page__c</fullName>
        <label>Other 1 Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_1__c</fullName>
        <inlineHelpText>Optional field if you have additional system tracking requirments.</inlineHelpText>
        <label>Other 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_2_Source_Page__c</fullName>
        <label>Other 2 Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_2__c</fullName>
        <inlineHelpText>Optional field if you have additional system tracking requirments.</inlineHelpText>
        <label>Other 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_3_Source_Page__c</fullName>
        <label>Other 3 Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_3__c</fullName>
        <inlineHelpText>Optional field if you have additional system tracking requirments.</inlineHelpText>
        <label>Other 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Deal_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participation Deal Summary</label>
        <referenceTo>Participation_Deal_Summary__c</referenceTo>
        <relationshipLabel>Boarding Forms</relationshipLabel>
        <relationshipName>Boarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Source_Page__c</fullName>
        <label>Payment Amount Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <inlineHelpText>If applicable, this amount can be found on the Note. Interest only commercial loans do not typically have a designated payment amount.</inlineHelpText>
        <label>Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Code_Source_Page__c</fullName>
        <label>Payment Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Code__c</fullName>
        <inlineHelpText>This is how payments will be calculated. Select 2 for interest only loans.</inlineHelpText>
        <label>Payment Code *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 – Scheduled payment includes accrued interest</fullName>
                </value>
                <value>
                    <fullName>1 – Amount is scheduled plus accrued</fullName>
                </value>
                <value>
                    <fullName>2 – Payment is accrued interest only</fullName>
                </value>
                <value>
                    <fullName>3 – Scheduled payment applies to principal only</fullName>
                </value>
                <value>
                    <fullName>5 – Loan is single payment at maturity basis</fullName>
                </value>
                <value>
                    <fullName>6 – Payment amount calculated at statement cycle time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Frequency_Source_Page__c</fullName>
        <label>Payment Frequency Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <inlineHelpText>This is how often payments will be due. Typically payments are due monthly.</inlineHelpText>
        <label>Payment Frequency *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Ready__c</fullName>
        <description>Help to know is the Payment section is ready for summited for Approval</description>
        <formula>AND(  
     NOT ( ISBLANK(text(Payment_Frequency__c) ) || ISNULL(text(Payment_Frequency__c) ) ) , 
     NOT ( ISBLANK(Payment_Frequency_Source_Page__c) || ISNULL(Payment_Frequency_Source_Page__c) ) , 
     NOT ( ISBLANK(text(Payment_Code__c) ) || ISNULL(text(Payment_Code__c) ) ) , 
     NOT ( ISBLANK(Payment_Code_Source_Page__c) || ISNULL(Payment_Code_Source_Page__c) ), 
     NOT ( ISBLANK(First_Payment_Date__c) || ISNULL(First_Payment_Date__c) ) , 
     NOT ( ISBLANK(First_Payment_Date_Source_Page__c) || ISNULL(First_Payment_Date_Source_Page__c) ), 
     NOT ( ISBLANK(Next_Due_Date__c) || ISNULL(Next_Due_Date__c) ), 
     NOT ( ISBLANK(Next_Due_Date_Source_Page__c) || ISNULL(Next_Due_Date_Source_Page__c) ) , 
     NOT ( ISBLANK(of_Days_Before_Printing_Bills__c) || ISNULL(of_Days_Before_Printing_Bills__c) ) ,  
     NOT ( ISBLANK(Days_Before_Printing_Source_Page__c) || ISNULL(Days_Before_Printing_Source_Page__c) ), 
     NOT ( ISBLANK(text(Send_Payment_Billings__c) ) || ISNULL(text(Send_Payment_Billings__c) ) ) , 
     NOT ( ISBLANK(Send_Payment_Billings_Source_Page__c) || ISNULL(Send_Payment_Billings_Source_Page__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Info Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Analyst_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default set from Opp.
CI_Primary_Analyst__c</description>
        <label>Primary Analyst *</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Boarding Forms (Primary Analyst)</relationshipLabel>
        <relationshipName>Boarding_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Initial_Funding_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Initial_Funding__c</fullName>
        <description>Default set by trigger from Opp. field
CI_Projected_Initial_Funding__c</description>
        <label>Projected Initial Funding *</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_City_Source_Page__c</fullName>
        <label>Property City Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Country_Source_Page__c</fullName>
        <label>Property Country Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <label>Property Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Postal_Code_Zip_Source_Page__c</fullName>
        <label>Property Postal Code/Zip Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Postal_Code_Zip__c</fullName>
        <label>Property Postal Code/Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State_Source_Page__c</fullName>
        <label>Property State Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street_Source_Page__c</fullName>
        <label>Property Street Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <inlineHelpText>If applicable, subject property location. Source doc: Appraisal or Appraisal Review</inlineHelpText>
        <label>Property Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_Code__c</fullName>
        <description>Default set by trigger from Loan Ops Questionaire field
Purpose_Code__c</description>
        <inlineHelpText>Assigned at LOQ level by Operations authorized designee.. Source doc: C+I Loan Type Matrix</inlineHelpText>
        <label>Purpose Code *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 - Lender Finance</fullName>
                </value>
                <value>
                    <fullName>31 - Bridge/A and D</fullName>
                </value>
                <value>
                    <fullName>34 - Farmland</fullName>
                </value>
                <value>
                    <fullName>35 - Participation</fullName>
                </value>
                <value>
                    <fullName>36 - Lender Finance Participation</fullName>
                </value>
                <value>
                    <fullName>37 - Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Floor_Source_Page__c</fullName>
        <label>Rate Floor Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Floor__c</fullName>
        <inlineHelpText>Only applicable if the loan is adjustable/floating. The minimum rate the Borrower will accrue interest at. Source doc: Loan Agreement, Note, other legal agreement.</inlineHelpText>
        <label>Rate Floor</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Index_Number_Source_Page__c</fullName>
        <label>Rate Index Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Index_Number__c</fullName>
        <inlineHelpText>Only applicable if the loan is adjustable/floating. This is the floating rate type that will be added to the base interest rate (rate margin). Source doc(1 of the following): Loan Agreement, Note, other legal agreement.</inlineHelpText>
        <label>Rate Index Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>507 – WSJ 3.25%</fullName>
                </value>
                <value>
                    <fullName>509 – Libor Floor 1.25%</fullName>
                </value>
                <value>
                    <fullName>510 – Libor Floor 1.00%</fullName>
                </value>
                <value>
                    <fullName>513 – 1 mo WSJ Libor</fullName>
                </value>
                <value>
                    <fullName>514 – 6 mo WSJ Libor</fullName>
                </value>
                <value>
                    <fullName>515 – 1 yr London Libor</fullName>
                </value>
                <value>
                    <fullName>519 – Libor Floor 0.75%</fullName>
                </value>
                <value>
                    <fullName>520 – 3 mo Libor</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Margin_Source_Page__c</fullName>
        <label>Rate Margin Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Margin__c</fullName>
        <inlineHelpText>Only applicable if the loan is adjustable/floating. The base interest that is added to the rate index number. Source doc: Loan Agreement, Note, other legal agreement.</inlineHelpText>
        <label>Rate Margin</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Ready__c</fullName>
        <formula>AND( NOT ( ISBLANK( Rate__c ) || ISNULL(Rate__c) ), 
     NOT ( ISBLANK(Rate_Source_Page__c ) || ISNULL(Rate_Source_Page__c) )	
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Info Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Date_Source_Page__c</fullName>
        <label>Rate Review Date Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Date__c</fullName>
        <inlineHelpText>Only applicable if the loan is adjustable/floating. The next date the rate index number should be updated. Source doc (1 of the following): Loan Agreement, Note, other legal agreement.  *CADENCE loans are only reviewed as of the 1st of the month.</inlineHelpText>
        <label>Rate Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Day_of_Month_Source_Page__c</fullName>
        <label>Rate Review Day of Month Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Day_of_Month__c</fullName>
        <inlineHelpText>Only applicable if the loan is adjustable/floating. Day of the month that the rate index number should be reviewed. Souce doc (1 of the following): Loan Agreement, Note, other legal agreement.  *CADENCE loans are only reviewed as of the 1st of the month.</inlineHelpText>
        <label>Rate Review Day of Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Term_Frequency_Source_Page__c</fullName>
        <label>Rate Review Term Frequency Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Term_Frequency__c</fullName>
        <inlineHelpText>Only applicable if the loan is adjustable/floating. This is how often the rate should be updated. Source doc (1 of the following): Loan Agreement, Note, other legal agreement. *CADENCE loans are only reviewed as of the 1st of the month.</inlineHelpText>
        <label>Rate Review Term Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Term_Source_Page__c</fullName>
        <label>Rate Review Term Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Review_Term__c</fullName>
        <inlineHelpText>Only applicable if the loan is adjustable/floating. This is how the rate revew term frequency is measured. Source doc (1 of the following): Loan Agreement, Note, other legal agreement. *CADENCE loans are only reviewed as of the 1st of the month.</inlineHelpText>
        <label>Rate Review Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Source_Page__c</fullName>
        <label>Rate Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Default set by trigger from Opp. field
CI_Rate__c</description>
        <inlineHelpText>Only applicable if the loan is fixed. Rate the borrower will accrue interest at. Source doc (1 of the following): Loan Agreement, Note, other legal agreement.</inlineHelpText>
        <label>Rate *</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Record_Locked_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This record will be true if the record get approved and prevent to be modified by other than 
Profiles: API Service Account &amp; System Admin 
Roles: C&amp;I Manager - Loan Operations Manager, C&amp;I Manager - Loan Operations</description>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_LOQ_Source_Page__c</fullName>
        <label>Related LOQ Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_LOQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be the Loan Ops Questionaire record Name which is an auto number.</description>
        <label>Related LOQ</label>
        <referenceTo>Loan_Ops_Questionnaire__c</referenceTo>
        <relationshipLabel>Boarding Form</relationshipLabel>
        <relationshipName>Boarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Loan_1__c</fullName>
        <label>Related Loan #1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Loan_2__c</fullName>
        <label>Related Loan #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Loan_3__c</fullName>
        <label>Related Loan #3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default set by trigger from Opp. field
Owner</description>
        <label>Relationship Manager*</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Boarding Forms</relationshipLabel>
        <relationshipName>Boarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Rating_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <description>Default set by trigger from Opp. field
CI_Risk_Rating__c</description>
        <inlineHelpText>Source doc: Final CAM, reference risk rating model page</inlineHelpText>
        <label>Risk Rating *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC2_24hReminderDate__c</fullName>
        <label>SFDC2 24h Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Payment_Billings_Source_Page__c</fullName>
        <label>Send Payment Billings Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Payment_Billings__c</fullName>
        <inlineHelpText>If serviced within CADENCE, select No. If serviced by a 3rd party agent, select No. All others select Statements.</inlineHelpText>
        <label>Send Payment Billings *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y – Yes</fullName>
                </value>
                <value>
                    <fullName>N – No</fullName>
                </value>
                <value>
                    <fullName>S – Statements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumLoanRecords__c</fullName>
        <description>Count the relationship whit the Loan Object</description>
        <label>SumLoanRecords</label>
        <summaryForeignKey>Loan__c.Boarding_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Term_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Code__c</fullName>
        <inlineHelpText>This is how the term is measured. Typically M for months.</inlineHelpText>
        <label>Term Code *</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Line_Source_Page__c</fullName>
        <label>Type of Line Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Line__c</fullName>
        <inlineHelpText>Not applicable to loans fully funded at origination. Revolving: the total credit line may be advanced as frequently as availability allows (principal paydowns gain back availability). Straight: advances to the line cannot exceed the total credit line but</inlineHelpText>
        <label>Type of Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Straight</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Performance Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Financial Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Commercial Letter of Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wire_Received_Account__c</fullName>
        <label>Wire Received Account #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_Built_Source_Page__c</fullName>
        <label>Year Built Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <inlineHelpText>Year the subject property was built.  Source doc: Appraisal or appraisal review.</inlineHelpText>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iBase_Source_Page__c</fullName>
        <description>Source &amp; Page field for iBase</description>
        <inlineHelpText>Source &amp; Page field for iBase</inlineHelpText>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Days_Before_Printing_Bills__c</fullName>
        <inlineHelpText>If interest billings will be automatically paid from a prefunded interest reserve, enter 3. All others input 14.</inlineHelpText>
        <label># of Days Before Printing Bills *</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Boarding Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BF-{00000}</displayFormat>
        <label>Boarding Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boarding Forms</pluralLabel>
    <recordTypes>
        <fullName>Post_LOQ_Approval</fullName>
        <active>true</active>
        <label>Post LOQ Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_LOQ_Approval</fullName>
        <active>true</active>
        <label>Pre LOQ Approval</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BF_SFDC2_NumberOnlyFields</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND( NOT(ISBLANK( Loan_Number__c )), NOT (ISNUMBER ( Loan_Number__c ))), 
AND( NOT(ISBLANK( Related_Loan_1__c )),NOT (ISNUMBER ( Related_Loan_1__c))),
AND( NOT(ISBLANK( Related_Loan_2__c)), NOT (ISNUMBER ( Related_Loan_2__c))), 
AND( NOT(ISBLANK( Related_Loan_3__c)), NOT (ISNUMBER ( Related_Loan_3__c))), 
AND( NOT(ISBLANK( Holding_GL_Account__c )), NOT (ISNUMBER ( Holding_GL_Account__c ))), 
AND( NOT(ISBLANK( Wire_Received_Account__c )), NOT (ISNUMBER ( Wire_Received_Account__c ))) 
)</errorConditionFormula>
        <errorMessage>Loan &amp; Account Numbers cannot contain alphabetic characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BWR_2_Phone_Number_Format</fullName>
        <active>true</active>
        <description>Enforces 10 digits, no characters. Allows parentheses and dash for the data loader.</description>
        <errorConditionFormula>NOT(
    OR(
        ISBLANK(BWR_2_Phone_Number__c),
        REGEX( BWR_2_Phone_Number__c , &quot;\\D*?(\\d\\D*?){10}&quot;)
    )
)</errorConditionFormula>
        <errorDisplayField>BWR_2_Phone_Number__c</errorDisplayField>
        <errorMessage>Verify the phone number is in the format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BWR_2_Postal_Code_Numeric</fullName>
        <active>true</active>
        <description>Validates that the BWR 2 Postal Code field only contains numeric values</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(BWR_2_Mailing_Address_Postal_Code__c)),
NOT(ISNUMBER(BWR_2_Mailing_Address_Postal_Code__c))
)</errorConditionFormula>
        <errorDisplayField>BWR_2_Mailing_Address_Postal_Code__c</errorDisplayField>
        <errorMessage>Only numeric characters are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BWR_2_State_Alphabetic</fullName>
        <active>true</active>
        <description>Validates that the BWR 2 Mailing State field only contains letters</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(BWR_2_Mailing_Address_State__c)),
NOT(REGEX(BWR_2_Mailing_Address_State__c, &quot;[a-zA-Z]*(\\s[a-zA-Z]*)?&quot;))
)</errorConditionFormula>
        <errorDisplayField>BWR_2_Mailing_Address_State__c</errorDisplayField>
        <errorMessage>Only letters and a single space are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BWR_2_Tax_ID_Number_TIN_Format</fullName>
        <active>true</active>
        <description>Requires format &quot;XX-XXXXXXX&quot; where X is digit 0-9</description>
        <errorConditionFormula>NOT(
  OR(
    ISBLANK( BWR_2_Tax_ID_Number__c ),
    REGEX( BWR_2_Tax_ID_Number__c , &quot;[\\d]{2}-[\\d]{7}&quot; )
  )
)</errorConditionFormula>
        <errorDisplayField>BWR_2_Tax_ID_Number__c</errorDisplayField>
        <errorMessage>BWR 2 Tax ID Number must be in format &quot;XX-XXXXXXX&quot; including the dash, where X is a 0-9 digit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BWR_Postal_Code_Numeric</fullName>
        <active>true</active>
        <description>Validates that the BWR Postal Code field only contains numeric values</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Borrower_Mailing_Address_Postal_Code__c)),
NOT(ISNUMBER(Borrower_Mailing_Address_Postal_Code__c))
)</errorConditionFormula>
        <errorDisplayField>Borrower_Mailing_Address_Postal_Code__c</errorDisplayField>
        <errorMessage>Only numeric characters are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BWR_State_Alphabetic</fullName>
        <active>true</active>
        <description>Validates that the BWR Mailing State field only contains letters</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Borrower_Mailing_Address_State__c)),
NOT(REGEX(Borrower_Mailing_Address_State__c, &quot;[a-zA-Z]*(\\s[a-zA-Z]*)?&quot;))
)</errorConditionFormula>
        <errorDisplayField>Borrower_Mailing_Address_State__c</errorDisplayField>
        <errorMessage>Only letters and a single space are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Borrower_Phone_Number_Format</fullName>
        <active>true</active>
        <description>Enforces 10 digits, no characters. Allows parentheses and dash for the data loader.</description>
        <errorConditionFormula>NOT(
    OR(
        ISBLANK(Borrower_Phone_Number__c),
        REGEX( Borrower_Phone_Number__c , &quot;\\D*?(\\d\\D*?){10}&quot;)
    )
)</errorConditionFormula>
        <errorDisplayField>Borrower_Phone_Number__c</errorDisplayField>
        <errorMessage>Verify the phone number is in the format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Borrower_Tax_ID_Number_TIN_Format</fullName>
        <active>true</active>
        <description>Requires format &quot;XX-XXXXXXX&quot; where X is digit 0-9</description>
        <errorConditionFormula>NOT(
  OR(
    ISBLANK( Borrower_Tax_ID_Number__c ),
    REGEX( Borrower_Tax_ID_Number__c , &quot;[\\d]{2}-[\\d]{7}&quot; )
  )
)</errorConditionFormula>
        <errorDisplayField>Borrower_Tax_ID_Number__c</errorDisplayField>
        <errorMessage>Borrower Tax ID Number must be in format &quot;XX-XXXXXXX&quot; including the dash, where X is a 0-9 digit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DDA_Account_Number_1</fullName>
        <active>true</active>
        <description>Requires digits only</description>
        <errorConditionFormula>NOT(
  OR(
    ISBLANK( DDA_Account_Number_1__c ),
    REGEX( DDA_Account_Number_1__c , &quot;[\\d]+&quot; )
  )
)</errorConditionFormula>
        <errorDisplayField>DDA_Account_Number_1__c</errorDisplayField>
        <errorMessage>DDA Account Number 1 may only contain digits (0-9).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DDA_Account_Number_2</fullName>
        <active>true</active>
        <description>Requires digits only</description>
        <errorConditionFormula>NOT(
  OR(
    ISBLANK( DDA_Account_Number_2__c ),
    REGEX( DDA_Account_Number_2__c , &quot;[\\d]+&quot; )
  )
)</errorConditionFormula>
        <errorDisplayField>DDA_Account_Number_2__c</errorDisplayField>
        <errorMessage>DDA Account Number 2 may only contain digits (0-9).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DDA_Account_Number_3</fullName>
        <active>true</active>
        <description>Requires digits only</description>
        <errorConditionFormula>NOT(
  OR(
    ISBLANK( DDA_Account_Number_3__c ),
    REGEX( DDA_Account_Number_3__c , &quot;[\\d]+&quot; )
  )
)</errorConditionFormula>
        <errorDisplayField>DDA_Account_Number_3__c</errorDisplayField>
        <errorMessage>DDA Account Number 3 may only contain digits (0-9).</errorMessage>
    </validationRules>
</CustomObject>